Improved Readme explaining browser support and removed fix for promo in core experience because it breaks the more menu in all browsers

--- a/src/scss/nav/theme-tools.scss
+++ b/src/scss/nav/theme-tools.scss
@@ -3,7 +3,6 @@
     min-width: 45px;
     height: 80px;
     white-space: nowrap;
-    overflow: hidden;
 
     [data-o-hierarchical-nav-level='1'] {
         & > [aria-controls] > a,
